main.go import snowflake init func

--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -2,6 +2,9 @@ name: "web_app"
 mode: "dev"
 port: 8080
 version: "v0.1.5"
+start_time: "2021-08-12"
+machine_id: 1
+
 log:
   level: "debug"
   filename: "web_app.log"
